gitops/envs/conf-dso/apps/vault/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: dso-vault
  annotations:
    route.openshift.io/termination: edge
  labels:
    app: vault
spec:
  ingressClassName: <path:dso-sandbox/data/env/conf-dso/apps/global/values#ingressClassName>
  rules:
    - host: <path:dso-sandbox/data/env/conf-dso/apps/global/values#domain | jsonPath {.vault}>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conf-dso-vault-active
                port:
                  number: 8200
